<resources>
    <string name="app_name">Grüber</string>
    <string name="login_button_text">Login</string>
    <string name="create_account">Create an Account</string>
    <string name="login_title">Welcome to Grüber.</string>
    <string name="login_phrase">Grocery at your finger tips!</string>
    <string name="create_account_title">Register</string>
    <string name="create_account_phrase">Customer or store owner? Choose an option below:</string>
    <string name="create_account_button_text">Register</string>
    <string name="create_account_info_text">Enter your information below:</string>

    <string name="customer_main_title">Hey, </string>
    <string name="customer_main_subtitle">Choose a shop: </string>

    <string name="owner_main_title">Hey, </string>
    <string name="owner_main_subtitle">Choose from the following: </string>

    <string name="manage_store_title">Manage Store Details 🛍 </string>
    <string name="manage_store_name">Store Name</string>
    <string name="manage_store_location">Store Location</string>
    <string name="manage_storage_tax">Service and Tax</string>
    <string name="manage_store_image_link">Link to Store Image/Logo (optional)</string>
    <string name="manage_store_update">Update</string>


</resources>